fixed two bugs in the text lining tool (missing space when multiple consecutive lines are selected + excluding name of the persona loquens when selecting and copying the locator of a passage

--- a/css/default.css
+++ b/css/default.css
@@ -6,6 +6,12 @@ tei-l:before {
     color: darkgray;
 }
 
+tei-speaker:before {
+    content: attr(name);
+    display: inline;
+    font-weight: bold;
+}
+
 tei-l {
     display: block;
     margin-left: 100px;
